Bug 39513 - [Qt] Using Accelerated Composing the rocket back animation on http://www.the-art-of-web.com/css/css-animation/ works differently as when not using AC.
Summary: [Qt] Using Accelerated Composing the rocket back animation on http://www.the-...
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P3 Major
Assignee: Nobody
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-05-21 13:58 PDT by Kenneth Rohde Christiansen
Modified: 2010-05-25 14:29 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.96 KB, patch)
2010-05-21 13:58 PDT, Kenneth Rohde Christiansen
no flags Details | Formatted Diff | Diff
Same functionality, but also applied to opacity animations and without redundant conditionals :) (2.89 KB, patch)
2010-05-21 15:55 PDT, Noam Rosenthal
kenneth: review-
Details | Formatted Diff | Diff
oops, some extra stuff got in there (2.20 KB, patch)
2010-05-21 15:56 PDT, Noam Rosenthal
kenneth: review+
Details | Formatted Diff | Diff
second fix to the changelog (2.25 KB, patch)
2010-05-21 16:00 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Rohde Christiansen 2010-05-21 13:58:39 PDT
Created attachment 56743 [details]
Patch

When using the QWebGraphicsView which has AC enabled by default, the rocket back animation on http://www.the-art-of-web.com/css/css-animation/ works differently as when not using AC. It always goes back from the end position and not the current position.
Comment 1 Laszlo Gombos 2010-05-21 14:44:17 PDT
Noam, is there other places where m_fillsForward is not needed (e.g. for m_layer.data()->m_layer->setOpacity(opacity)) ?
Comment 2 Noam Rosenthal 2010-05-21 15:55:21 PDT
Created attachment 56758 [details]
Same functionality, but also applied to opacity animations and without redundant conditionals :)
Comment 3 Noam Rosenthal 2010-05-21 15:56:29 PDT
Created attachment 56759 [details]
oops, some extra stuff got in there
Comment 4 Kenneth Rohde Christiansen 2010-05-21 15:58:31 PDT
Comment on attachment 56758 [details]
Same functionality, but also applied to opacity animations and without redundant conditionals :)

WebCore/platform/network/qt/ResourceRequestQt.cpp:83
 +  #if 0 && QT_VERSION >= QT_VERSION_CHECK(4, 7, 0)
This doesn't seem related!
Comment 5 Noam Rosenthal 2010-05-21 16:00:55 PDT
Created attachment 56760 [details]
second fix to the changelog
Comment 6 WebKit Commit Bot 2010-05-23 04:59:26 PDT
Comment on attachment 56760 [details]
second fix to the changelog

Clearing flags on attachment: 56760

Committed r60040: <http://trac.webkit.org/changeset/60040>
Comment 7 Simon Hausmann 2010-05-25 14:29:12 PDT
Revision r60040 cherry-picked into qtwebkit-2.0 with commit b9c0ab3cefa31581779aee8deef391d19567006a