WebCore/platform/graphics/qt/GraphicsLayerQt.cpp
@@ -1320,9 +1320,9 @@ public:
             transformMatrix.blend(m_sourceMatrix, progress);
         }
 
+        m_layer.data()->m_layer->setTransform(transformMatrix);
+        // We force the actual opacity change, otherwise it would be ignored because of the animation.
         m_layer.data()->setBaseTransform(transformMatrix);
-        if (m_fillsForwards)
-            m_layer.data()->m_layer->setTransform(m_layer.data()->m_baseTransform);
     }
 
     virtual void updateState(QAbstractAnimation::State newState, QAbstractAnimation::State oldState)
@@ -1370,9 +1370,9 @@ public:
         if (!m_layer.data()->opacity() && opacity)
             m_layer.data()->scene()->update();
 
+        m_layer.data()->m_layer->setOpacity(opacity);
+        // We force the actual opacity change, otherwise it would be ignored because of the animation.
         m_layer.data()->setOpacity(opacity);
-        if (m_fillsForwards)
-            m_layer.data()->m_layer->setOpacity(opacity);
     }
 
     virtual void updateState(QAbstractAnimation::State newState, QAbstractAnimation::State oldState)
